more covid19 stuff

--- a/environment.yml
+++ b/environment.yml
@@ -7,37 +7,21 @@ dependencies:
   - pandas>1.0.0
   - conda
   - conda-build
-  - fiona
-  - gdal
   - geopandas
   - html5lib
+  - ipykernel
   - ipython
   - jupyter
-  - ipykernel
   - lxml
   - matplotlib
   - numpy
-  - openpyxl
   - pip
-  - pydub
-  - pymc3
-  - pyproj
-  - pyqtgraph
-  - rasterio
-  - rtree
+  - scipy
   - seaborn
   - selenium
   - shapely
-  - six
   - statsmodels
   - svgutils
   - tqdm
   - wikipedia
   - xlrd
-  - pip:
-      - countryinfo
-      - pipwin
-      - qwikidata
-      - svgpathtools
-      - wikidata
-      - wptools
